--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Създаване на нов секретен ключ",
 	"Created at": "Създадено на",
 	"Created At": "Създадено на",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Текущ модел",
 	"Current Password": "Текуща Парола",
@@ -293,6 +294,9 @@
 	"May": "Май",
 	"Memories accessible by LLMs will be shown here.": "Мемории достъпни от LLMs ще бъдат показани тук.",
 	"Memory": "Мемория",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Съобщенията, които изпращате след създаването на връзката, няма да бъдат споделяни. Потребителите с URL адреса ще могат да видят споделения чат.",
 	"Minimum Score": "Минимална оценка",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Прочети на Голос",
 	"Record voice": "Записване на глас",
 	"Redirecting you to OpenWebUI Community": "Пренасочване към OpenWebUI общността",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Отказано, когато не трябва да бъде",
 	"Regenerate": "Регенериране",
 	"Release Notes": "Бележки по изданието",
@@ -419,6 +424,7 @@
 	"See what's new": "Виж какво е новото",
 	"Seed": "Seed",
 	"Select a base model": "Изберете базов модел",
+	"Select a engine": "",
 	"Select a mode": "Изберете режим",
 	"Select a model": "Изберете модел",
 	"Select a pipeline": "Изберете тръбопровод",
@@ -545,7 +551,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напиши описание в 50 знака, което описва [тема или ключова дума].",
 	"Yesterday": "вчера",
 	"You": "вие",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Не можете да клонирате базов модел",
 	"You have no archived conversations.": "Нямате архивирани разговори.",
 	"You have shared this chat": "Вие сте споделели този чат",
