--- a/src/lib/i18n/locales/bn-BD/translation.json
+++ b/src/lib/i18n/locales/bn-BD/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "একটি নতুন সিক্রেট কী তৈরি করুন",
 	"Created at": "নির্মানকাল",
 	"Created At": "নির্মানকাল",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "বর্তমান মডেল",
 	"Current Password": "বর্তমান পাসওয়ার্ড",
@@ -293,6 +294,9 @@
 	"May": "মে",
 	"Memories accessible by LLMs will be shown here.": "LLMs দ্বারা অ্যাক্সেসযোগ্য মেমোরিগুলি এখানে দেখানো হবে।",
 	"Memory": "মেমোরি",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "আপনার লিঙ্ক তৈরি করার পরে আপনার পাঠানো বার্তাগুলি শেয়ার করা হবে না। ইউআরএল ব্যবহারকারীরা শেয়ার করা চ্যাট দেখতে পারবেন।",
 	"Minimum Score": "Minimum Score",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "পড়াশোনা করুন",
 	"Record voice": "ভয়েস রেকর্ড করুন",
 	"Redirecting you to OpenWebUI Community": "আপনাকে OpenWebUI কমিউনিটিতে পাঠানো হচ্ছে",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "যদি উপযুক্ত নয়, তবে রেজিগেনেট করা হচ্ছে",
 	"Regenerate": "রেজিগেনেট করুন",
 	"Release Notes": "রিলিজ নোটসমূহ",
@@ -419,6 +424,7 @@
 	"See what's new": "নতুন কী আছে দেখুন",
 	"Seed": "সীড",
 	"Select a base model": "একটি বেস মডেল নির্বাচন করুন",
+	"Select a engine": "",
 	"Select a mode": "একটি মডেল নির্বাচন করুন",
 	"Select a model": "একটি মডেল নির্বাচন করুন",
 	"Select a pipeline": "একটি পাইপলাইন নির্বাচন করুন",
@@ -545,7 +551,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "৫০ শব্দের মধ্যে [topic or keyword] এর একটি সারসংক্ষেপ লিখুন।",
 	"Yesterday": "আগামী",
 	"You": "আপনি",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "আপনি একটি বেস মডেল ক্লোন করতে পারবেন না",
 	"You have no archived conversations.": "আপনার কোনও আর্কাইভ করা কথোপকথন নেই।",
 	"You have shared this chat": "আপনি এই চ্যাটটি শেয়ার করেছেন",
