--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Crea una nova clau secreta",
 	"Created at": "Creat el",
 	"Created At": "Creat el",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Model Actual",
 	"Current Password": "Contrasenya Actual",
@@ -293,6 +294,9 @@
 	"May": "Maig",
 	"Memories accessible by LLMs will be shown here.": "Els memòries accessible per a LLMs es mostraran aquí.",
 	"Memory": "Memòria",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Els missatges que envieu després de crear el vostre enllaç no es compartiran. Els usuaris amb l'URL podran veure el xat compartit.",
 	"Minimum Score": "Puntuació mínima",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Llegiu al voltant",
 	"Record voice": "Enregistra veu",
 	"Redirecting you to OpenWebUI Community": "Redirigint-te a la Comunitat OpenWebUI",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Refusat quan no hauria d'haver-ho",
 	"Regenerate": "Regenerar",
 	"Release Notes": "Notes de la Versió",
@@ -420,6 +425,7 @@
 	"See what's new": "Veure novetats",
 	"Seed": "Llavor",
 	"Select a base model": "Seleccionar un model base",
+	"Select a engine": "",
 	"Select a mode": "Selecciona un mode",
 	"Select a model": "Selecciona un model",
 	"Select a pipeline": "Seleccioneu una canonada",
@@ -546,7 +552,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Escriu un resum en 50 paraules que resumeixi [tema o paraula clau].",
 	"Yesterday": "Ayer",
 	"You": "Tu",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "No es pot clonar un model base",
 	"You have no archived conversations.": "No tens converses arxivades.",
 	"You have shared this chat": "Has compartit aquest xat",
