--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Neuen API Schlüssel erstellen",
 	"Created at": "Erstellt am",
 	"Created At": "Erstellt am",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Aktuelles Modell",
 	"Current Password": "Aktuelles Passwort",
@@ -293,6 +294,9 @@
 	"May": "Mai",
 	"Memories accessible by LLMs will be shown here.": "Memories, die von LLMs zugänglich sind, werden hier angezeigt.",
 	"Memory": "Memory",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Nachdem Sie Ihren Link erstellt haben, werden Ihre Nachrichten nicht geteilt. Benutzer mit dem Link können den geteilten Chat sehen.",
 	"Minimum Score": "Mindestscore",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Vorlesen",
 	"Record voice": "Stimme aufnehmen",
 	"Redirecting you to OpenWebUI Community": "Du wirst zur OpenWebUI-Community weitergeleitet",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Abgelehnt, obwohl es nicht hätte sein sollen.",
 	"Regenerate": "Neu generieren",
 	"Release Notes": "Versionshinweise",
@@ -419,6 +424,7 @@
 	"See what's new": "Was gibt's Neues",
 	"Seed": "Seed",
 	"Select a base model": "Wählen Sie ein Basismodell",
+	"Select a engine": "",
 	"Select a mode": "Einen Modus auswählen",
 	"Select a model": "Ein Modell auswählen",
 	"Select a pipeline": "Wählen Sie eine Pipeline aus",
@@ -545,7 +551,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Schreibe eine kurze Zusammenfassung in 50 Wörtern, die [Thema oder Schlüsselwort] zusammenfasst.",
 	"Yesterday": "Gestern",
 	"You": "Du",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Sie können ein Basismodell nicht klonen",
 	"You have no archived conversations.": "Du hast keine archivierten Unterhaltungen.",
 	"You have shared this chat": "Du hast diesen Chat",
