--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "",
 	"Created at": "Created at",
 	"Created At": "",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Current Model",
 	"Current Password": "Current Password",
@@ -293,6 +294,9 @@
 	"May": "",
 	"Memories accessible by LLMs will be shown here.": "",
 	"Memory": "",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "",
 	"Minimum Score": "",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "",
 	"Record voice": "Record Bark",
 	"Redirecting you to OpenWebUI Community": "Redirecting you to OpenWebUI Community",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "",
 	"Regenerate": "",
 	"Release Notes": "Release Borks",
@@ -421,6 +426,7 @@
 	"See what's new": "See what's new so amaze",
 	"Seed": "Seed very plant",
 	"Select a base model": "",
+	"Select a engine": "",
 	"Select a mode": "Select a mode very choose",
 	"Select a model": "Select a model much choice",
 	"Select a pipeline": "",
@@ -547,7 +553,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Write a summary in 50 words that summarizes [topic or keyword]. Much summarize.",
 	"Yesterday": "",
 	"You": "",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "",
 	"You have shared this chat": "",
