--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Luo uusi salainen avain",
 	"Created at": "Luotu",
 	"Created At": "Luotu",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Nykyinen malli",
 	"Current Password": "Nykyinen salasana",
@@ -293,6 +294,9 @@
 	"May": "toukokuu",
 	"Memories accessible by LLMs will be shown here.": "Muistitiedostot, joita LLM-ohjelmat käyttävät, näkyvät tässä.",
 	"Memory": "Muisti",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Linkin luomisen jälkeen lähettämiäsi viestejä ei jaeta. Käyttäjät, joilla on URL-osoite, voivat tarkastella jaettua keskustelua.",
 	"Minimum Score": "Vähimmäispisteet",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Lue ääneen",
 	"Record voice": "Nauhoita ääni",
 	"Redirecting you to OpenWebUI Community": "Ohjataan sinut OpenWebUI-yhteisöön",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Kieltäytyi, vaikka ei olisi pitänyt",
 	"Regenerate": "Uudelleenluo",
 	"Release Notes": "Julkaisutiedot",
@@ -419,6 +424,7 @@
 	"See what's new": "Katso, mitä uutta",
 	"Seed": "Siemen",
 	"Select a base model": "Valitse perusmalli",
+	"Select a engine": "",
 	"Select a mode": "Valitse tila",
 	"Select a model": "Valitse malli",
 	"Select a pipeline": "Valitse putki",
@@ -545,7 +551,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Kirjoita 50 sanan yhteenveto, joka tiivistää [aihe tai avainsana].",
 	"Yesterday": "Eilen",
 	"You": "Sinä",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Perusmallia ei voi kloonata",
 	"You have no archived conversations.": "Sinulla ei ole arkistoituja keskusteluja.",
 	"You have shared this chat": "Olet jakanut tämän keskustelun",
