--- a/src/lib/i18n/locales/fr-CA/translation.json
+++ b/src/lib/i18n/locales/fr-CA/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Créer une nouvelle clé secrète",
 	"Created at": "Créé le",
 	"Created At": "Créé le",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Modèle actuel",
 	"Current Password": "Mot de passe actuel",
@@ -293,6 +294,9 @@
 	"May": "Mai",
 	"Memories accessible by LLMs will be shown here.": "Les mémoires accessibles par les LLM seront affichées ici.",
 	"Memory": "Mémoire",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Les messages que vous envoyez après la création de votre lien ne seront pas partagés. Les utilisateurs avec l'URL pourront voir le chat partagé.",
 	"Minimum Score": "Score minimum",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Lire à l'échelle",
 	"Record voice": "Enregistrer la voix",
 	"Redirecting you to OpenWebUI Community": "Vous redirige vers la communauté OpenWebUI",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Refusé quand il ne devrait pas l'être",
 	"Regenerate": "Régénérer",
 	"Release Notes": "Notes de version",
@@ -420,6 +425,7 @@
 	"See what's new": "Voir les nouveautés",
 	"Seed": "Graine",
 	"Select a base model": "Sélectionner un modèle de base",
+	"Select a engine": "",
 	"Select a mode": "Sélectionnez un mode",
 	"Select a model": "Sélectionnez un modèle",
 	"Select a pipeline": "Sélectionner un pipeline",
@@ -546,7 +552,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Rédigez un résumé en 50 mots qui résume [sujet ou mot-clé].",
 	"Yesterday": "hier",
 	"You": "Vous",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Vous ne pouvez pas cloner un modèle de base",
 	"You have no archived conversations.": "Vous n'avez aucune conversation archivée.",
 	"You have shared this chat": "Vous avez partagé cette conversation",
