--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "צור מפתח סודי חדש",
 	"Created at": "נוצר ב",
 	"Created At": "נוצר ב",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "המודל הנוכחי",
 	"Current Password": "הסיסמה הנוכחית",
@@ -293,6 +294,9 @@
 	"May": "מאי",
 	"Memories accessible by LLMs will be shown here.": "מזכירים נגישים על ידי LLMs יוצגו כאן.",
 	"Memory": "זיכרון",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "הודעות שתשלח לאחר יצירת הקישור לא ישותפו. משתמשים עם כתובת האתר יוכלו לצפות בצ'אט המשותף.",
 	"Minimum Score": "ציון מינימלי",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "קרא בקול",
 	"Record voice": "הקלט קול",
 	"Redirecting you to OpenWebUI Community": "מפנה אותך לקהילת OpenWebUI",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "נדחה כאשר לא היה צריך",
 	"Regenerate": "הפק מחדש",
 	"Release Notes": "הערות שחרור",
@@ -420,6 +425,7 @@
 	"See what's new": "ראה מה חדש",
 	"Seed": "זרע",
 	"Select a base model": "בחירת מודל בסיס",
+	"Select a engine": "",
 	"Select a mode": "בחר מצב",
 	"Select a model": "בחר מודל",
 	"Select a pipeline": "בחר קו צינור",
@@ -546,7 +552,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "כתוב סיכום ב-50 מילים שמסכם [נושא או מילת מפתח].",
 	"Yesterday": "אתמול",
 	"You": "אתה",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "לא ניתן לשכפל מודל בסיס",
 	"You have no archived conversations.": "אין לך שיחות בארכיון.",
 	"You have shared this chat": "שיתפת את השיחה הזו",
