--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Stvori novi tajni ključ",
 	"Created at": "Stvoreno",
 	"Created At": "Stvoreno",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Trenutni model",
 	"Current Password": "Trenutna lozinka",
@@ -293,6 +294,9 @@
 	"May": "Svibanj",
 	"Memories accessible by LLMs will be shown here.": "Ovdje će biti prikazana memorija kojoj mogu pristupiti LLM-ovi.",
 	"Memory": "Memorija",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Poruke koje pošaljete nakon stvaranja veze neće se dijeliti. Korisnici s URL-om moći će vidjeti zajednički chat.",
 	"Minimum Score": "Minimalna ocjena",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Čitaj naglas",
 	"Record voice": "Snimanje glasa",
 	"Redirecting you to OpenWebUI Community": "Preusmjeravanje na OpenWebUI zajednicu",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Odbijen kada nije trebao biti",
 	"Regenerate": "Regeneriraj",
 	"Release Notes": "Bilješke o izdanju",
@@ -420,6 +425,7 @@
 	"See what's new": "Pogledajte što je novo",
 	"Seed": "Sjeme",
 	"Select a base model": "Odabir osnovnog modela",
+	"Select a engine": "",
 	"Select a mode": "Odaberite način",
 	"Select a model": "Odaberite model",
 	"Select a pipeline": "Odabir kanala",
@@ -546,7 +552,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Napišite sažetak u 50 riječi koji sažima [temu ili ključnu riječ].",
 	"Yesterday": "Jučer",
 	"You": "Vi",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Ne možete klonirati osnovni model",
 	"You have no archived conversations.": "Nemate arhiviranih razgovora.",
 	"You have shared this chat": "Podijelili ste ovaj razgovor",
