--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "新しいシークレットキーを作成",
 	"Created at": "作成日時",
 	"Created At": "作成日時",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "現在のモデル",
 	"Current Password": "現在のパスワード",
@@ -293,6 +294,9 @@
 	"May": "5月",
 	"Memories accessible by LLMs will be shown here.": "LLM がアクセスできるメモリはここに表示されます。",
 	"Memory": "メモリ",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "リンクを作成した後、送信したメッセージは共有されません。URL を持つユーザーは共有チャットを閲覧できます。",
 	"Minimum Score": "最低スコア",
 	"Mirostat": "ミロスタット",
@@ -379,6 +383,7 @@
 	"Read Aloud": "読み上げ",
 	"Record voice": "音声を録音",
 	"Redirecting you to OpenWebUI Community": "OpenWebUI コミュニティにリダイレクトしています",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "許可されないのに許可されました",
 	"Regenerate": "再生成",
 	"Release Notes": "リリースノート",
@@ -418,6 +423,7 @@
 	"See what's new": "新機能を見る",
 	"Seed": "シード",
 	"Select a base model": "基本モデルの選択",
+	"Select a engine": "",
 	"Select a mode": "モードを選択",
 	"Select a model": "モデルを選択",
 	"Select a pipeline": "パイプラインの選択",
@@ -544,7 +550,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[トピックまたはキーワード] を要約する 50 語の概要を書いてください。",
 	"Yesterday": "昨日",
 	"You": "あなた",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "基本モデルのクローンを作成できない",
 	"You have no archived conversations.": "これまでにアーカイブされた会話はありません。",
 	"You have shared this chat": "このチャットを共有しました",
