--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "새 비밀 키 만들기",
 	"Created at": "생성일",
 	"Created At": "생성일",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "현재 모델",
 	"Current Password": "현재 비밀번호",
@@ -293,6 +294,9 @@
 	"May": "5월",
 	"Memories accessible by LLMs will be shown here.": "LLM에서 액세스할 수 있는 메모리는 여기에 표시됩니다.",
 	"Memory": "메모리",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "링크를 만든 후 보낸 메시지는 공유되지 않습니다. URL이 있는 사용자는 공유 채팅을 볼 수 있습니다.",
 	"Minimum Score": "최소 점수",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "읽어주기",
 	"Record voice": "음성 녹음",
 	"Redirecting you to OpenWebUI Community": "OpenWebUI 커뮤니티로 리디렉션하는 중",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "허용되지 않았지만 허용되어야 합니다.",
 	"Regenerate": "재생성",
 	"Release Notes": "릴리스 노트",
@@ -418,6 +423,7 @@
 	"See what's new": "새로운 기능 보기",
 	"Seed": "시드",
 	"Select a base model": "기본 모델 선택",
+	"Select a engine": "",
 	"Select a mode": "모드 선택",
 	"Select a model": "모델 선택",
 	"Select a pipeline": "파이프라인 선택",
@@ -544,7 +550,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[주제 또는 키워드]에 대한 50단어 요약문 작성.",
 	"Yesterday": "어제",
 	"You": "당신",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "기본 모델은 복제할 수 없습니다",
 	"You have no archived conversations.": "채팅을 아카이브한 적이 없습니다.",
 	"You have shared this chat": "이 채팅을 공유했습니다.",
