--- a/src/lib/i18n/locales/lt-LT/translation.json
+++ b/src/lib/i18n/locales/lt-LT/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Sukurti naują slaptą raktą",
 	"Created at": "Sukurta",
 	"Created At": "Sukurta",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Dabartinis modelis",
 	"Current Password": "Esamas slaptažodis",
@@ -293,6 +294,9 @@
 	"May": "gegužė",
 	"Memories accessible by LLMs will be shown here.": "",
 	"Memory": "",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "",
 	"Minimum Score": "Minimalus rezultatas",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Skaityti garsiai",
 	"Record voice": "Įrašyti balsą",
 	"Redirecting you to OpenWebUI Community": "Perkeliam Jus į OpenWebUI bendruomenę",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Atmesta kai neturėtų būti atmesta",
 	"Regenerate": "Generuoti iš naujo",
 	"Release Notes": "Naujovės",
@@ -421,6 +426,7 @@
 	"See what's new": "Žiūrėti naujoves",
 	"Seed": "Sėkla",
 	"Select a base model": "",
+	"Select a engine": "",
 	"Select a mode": "Pasirinkti režimą",
 	"Select a model": "Pasirinkti modelį",
 	"Select a pipeline": "",
@@ -547,7 +553,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Parašyk santrumpą trumpesnę nei 50 žodžių šiam tekstui: [tekstas]",
 	"Yesterday": "Vakar",
 	"You": "Jūs",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "Jūs neturite archyvuotų pokalbių",
 	"You have shared this chat": "Pasidalinote šiuo pokalbiu",
