--- a/src/lib/i18n/locales/nb-NO/translation.json
+++ b/src/lib/i18n/locales/nb-NO/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Lag ny hemmelig nøkkel",
 	"Created at": "Opprettet",
 	"Created At": "Opprettet",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Nåværende modell",
 	"Current Password": "Nåværende passord",
@@ -293,6 +294,9 @@
 	"May": "Mai",
 	"Memories accessible by LLMs will be shown here.": "Minner tilgjengelige for LLM-er vil vises her.",
 	"Memory": "Minne",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Meldinger du sender etter at du har opprettet lenken din vil ikke bli delt. Brukere med URL-en vil kunne se den delte chatten.",
 	"Minimum Score": "Minimum poengsum",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Les høyt",
 	"Record voice": "Ta opp stemme",
 	"Redirecting you to OpenWebUI Community": "Omdirigerer deg til OpenWebUI-fellesskapet",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Avvist når det ikke skulle ha vært det",
 	"Regenerate": "Regenerer",
 	"Release Notes": "Utgivelsesnotater",
@@ -419,6 +424,7 @@
 	"See what's new": "Se hva som er nytt",
 	"Seed": "Seed",
 	"Select a base model": "Velg en grunnmodell",
+	"Select a engine": "",
 	"Select a mode": "Velg en modus",
 	"Select a model": "Velg en modell",
 	"Select a pipeline": "Velg en pipeline",
@@ -545,7 +551,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Skriv et sammendrag på 50 ord som oppsummerer [emne eller nøkkelord].",
 	"Yesterday": "I går",
 	"You": "Du",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Du kan ikke klone en grunnmodell",
 	"You have no archived conversations.": "Du har ingen arkiverte samtaler.",
 	"You have shared this chat": "Du har delt denne chatten",
