--- a/src/lib/i18n/locales/pl-PL/translation.json
+++ b/src/lib/i18n/locales/pl-PL/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Utwórz nowy klucz bezpieczeństwa",
 	"Created at": "Utworzono o",
 	"Created At": "Utworzono o",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Bieżący model",
 	"Current Password": "Bieżące hasło",
@@ -293,6 +294,9 @@
 	"May": "Maj",
 	"Memories accessible by LLMs will be shown here.": "Pamięci używane przez LLM będą tutaj widoczne.",
 	"Memory": "Pamięć",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Wiadomości wysyłane po utworzeniu linku nie będą udostępniane. Użytkownicy z adresem URL będą mogli wyświetlić udostępniony czat.",
 	"Minimum Score": "Minimalny wynik",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Czytaj na głos",
 	"Record voice": "Nagraj głos",
 	"Redirecting you to OpenWebUI Community": "Przekierowujemy Cię do społeczności OpenWebUI",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Odmówił, kiedy nie powinien",
 	"Regenerate": "Generuj ponownie",
 	"Release Notes": "Notatki wydania",
@@ -421,6 +426,7 @@
 	"See what's new": "Zobacz co nowego",
 	"Seed": "Seed",
 	"Select a base model": "Wybieranie modelu bazowego",
+	"Select a engine": "",
 	"Select a mode": "Wybierz tryb",
 	"Select a model": "Wybierz model",
 	"Select a pipeline": "Wybieranie potoku",
@@ -547,7 +553,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Napisz podsumowanie w 50 słowach, które podsumowuje [temat lub słowo kluczowe].",
 	"Yesterday": "Wczoraj",
 	"You": "Ty",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Nie można sklonować modelu podstawowego",
 	"You have no archived conversations.": "Nie masz zarchiwizowanych rozmów.",
 	"You have shared this chat": "Udostępniłeś ten czat",
