--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Направи нови тајни кључ",
 	"Created at": "Направљено у",
 	"Created At": "Направљено у",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Тренутни модел",
 	"Current Password": "Тренутна лозинка",
@@ -293,6 +294,9 @@
 	"May": "Мај",
 	"Memories accessible by LLMs will be shown here.": "Памћења које ће бити појављена од овог LLM-а ће бити приказана овде.",
 	"Memory": "Памћење",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Поруке које пошаљете након стварања ваше везе неће бити подељене. Корисници са URL-ом ће моћи да виде дељено ћаскање.",
 	"Minimum Score": "Најмањи резултат",
 	"Mirostat": "Миростат",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Прочитај наглас",
 	"Record voice": "Сними глас",
 	"Redirecting you to OpenWebUI Community": "Преусмеравање на OpenWebUI заједницу",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Одбијено када није требало",
 	"Regenerate": "Регенериши",
 	"Release Notes": "Напомене о издању",
@@ -420,6 +425,7 @@
 	"See what's new": "Погледај шта је ново",
 	"Seed": "Семе",
 	"Select a base model": "Избор основног модела",
+	"Select a engine": "",
 	"Select a mode": "Изабери режим",
 	"Select a model": "Изабери модел",
 	"Select a pipeline": "Избор цевовода",
@@ -546,7 +552,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишите сажетак у 50 речи који резимира [тему или кључну реч].",
 	"Yesterday": "Јуче",
 	"You": "Ти",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Не можеш клонирати основни модел",
 	"You have no archived conversations.": "Немате архивиране разговоре.",
 	"You have shared this chat": "Поделили сте ово ћаскање",
