--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Skapa ny hemlig nyckel",
 	"Created at": "Skapad",
 	"Created At": "Skapad",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Aktuell modell",
 	"Current Password": "Nuvarande lösenord",
@@ -293,6 +294,9 @@
 	"May": "mai",
 	"Memories accessible by LLMs will be shown here.": "Minnen som kan komma ihåg av LLM:er kommer att visas här.",
 	"Memory": "Minnen",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Meddelanden du skickar efter att ha skapat din länk kommer inte att delas. Användare med URL:en kommer att kunna se delad chatt.",
 	"Minimum Score": "Minimum poäng",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Läs igenom",
 	"Record voice": "Spela in röst",
 	"Redirecting you to OpenWebUI Community": "Omdirigerar dig till OpenWebUI Community",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Avvisades när det inte borde ha",
 	"Regenerate": "Regenerera",
 	"Release Notes": "Versionsinformation",
@@ -419,6 +424,7 @@
 	"See what's new": "Se vad som är nytt",
 	"Seed": "Seed",
 	"Select a base model": "Välj en basmodell",
+	"Select a engine": "",
 	"Select a mode": "Välj ett läge",
 	"Select a model": "Välj en modell",
 	"Select a pipeline": "Välj en pipeline",
@@ -545,7 +551,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Skriv en sammanfattning på 50 ord som sammanfattar [ämne eller nyckelord].",
 	"Yesterday": "Igenom",
 	"You": "du",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Du kan inte klona en basmodell",
 	"You have no archived conversations.": "Du har inga arkiverade konversationer.",
 	"You have shared this chat": "Du har delat denna chatt",
