--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Yeni gizli anahtar oluştur",
 	"Created at": "Oluşturulma tarihi",
 	"Created At": "Şu Tarihte Oluşturuldu:",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Mevcut Model",
 	"Current Password": "Mevcut Parola",
@@ -293,6 +294,9 @@
 	"May": "Mayıs",
 	"Memories accessible by LLMs will be shown here.": "LLM'ler tarafından erişilebilen bellekler burada gösterilecektir.",
 	"Memory": "Bellek",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Bağlantınızı oluşturduktan sonra gönderdiğiniz mesajlar paylaşılmayacaktır. URL'ye sahip kullanıcılar paylaşılan sohbeti görüntüleyebilecektir.",
 	"Minimum Score": "Minimum Skor",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Sesli Oku",
 	"Record voice": "Ses kaydı yap",
 	"Redirecting you to OpenWebUI Community": "OpenWebUI Topluluğuna yönlendiriliyorsunuz",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Reddedilmemesi gerekirken reddedildi",
 	"Regenerate": "Tekrar Oluştur",
 	"Release Notes": "Sürüm Notları",
@@ -419,6 +424,7 @@
 	"See what's new": "Yeniliklere göz atın",
 	"Seed": "Seed",
 	"Select a base model": "Bir temel model seç",
+	"Select a engine": "",
 	"Select a mode": "Bir mod seç",
 	"Select a model": "Bir model seç",
 	"Select a pipeline": "Bir pipeline seç",
@@ -545,7 +551,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[Konuyu veya anahtar kelimeyi] özetleyen 50 kelimelik bir özet yazın.",
 	"Yesterday": "Dün",
 	"You": "Sen",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Bir temel modeli klonlayamazsınız",
 	"You have no archived conversations.": "Arşivlenmiş sohbetleriniz yok.",
 	"You have shared this chat": "Bu sohbeti paylaştınız",
