--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Створити новий секретний ключ",
 	"Created at": "Створено у",
 	"Created At": "Створено у",
+	"Created by": "Створено",
 	"CSV Import": "Імпорт CSV",
 	"Current Model": "Поточна модель",
 	"Current Password": "Поточний пароль",
@@ -293,6 +294,9 @@
 	"May": "Травень",
 	"Memories accessible by LLMs will be shown here.": "Пам'ять, яка доступна LLM, буде показана тут.",
 	"Memory": "Пам'ять",
+	"Memory added successfully": "Пам'ять додано успішно",
+	"Memory cleared successfully": "Пам'ять успішно очищено",
+	"Memory deleted successfully": "Пам'ять успішно видалено",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Повідомлення, які ви надішлете після створення посилання, не будуть доступні для інших. Користувачі, які мають URL, зможуть переглядати спільний чат.",
 	"Minimum Score": "Мінімальний бал",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Читати вголос",
 	"Record voice": "Записати голос",
 	"Redirecting you to OpenWebUI Community": "Перенаправляємо вас до спільноти OpenWebUI",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "Називайте себе \"Користувач\" (наприклад, \"Користувач вивчає іспанську мову\")",
 	"Refused when it shouldn't have": "Відмовив, коли не мав би",
 	"Regenerate": "Регенерувати",
 	"Release Notes": "Нотатки до випуску",
@@ -421,6 +426,7 @@
 	"See what's new": "Подивіться, що нового",
 	"Seed": "Сід",
 	"Select a base model": "Вибрати базову модель",
+	"Select a engine": "Виберіть пошуковик",
 	"Select a mode": "Оберіть режим",
 	"Select a model": "Виберіть модель",
 	"Select a pipeline": "Виберіть pipeline",
@@ -511,7 +517,7 @@
 	"Update and Copy Link": "Оновлення та копіювання посилання",
 	"Update password": "Оновити пароль",
 	"Upload a GGUF model": "Завантажити GGUF модель",
-	"Upload Files": "Завантажити файли",
+	"Upload Files": "Додати файли",
 	"Upload Progress": "Прогрес завантаження",
 	"URL Mode": "Режим URL-адреси",
 	"Use '#' in the prompt input to load and select your documents.": "Для введення промтів до веб-сторінок (URL) або вибору документів, будь ласка, використовуйте символ '#'.",
@@ -547,7 +553,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишіть стислий зміст у 50 слів, який узагальнює [тема або ключове слово].",
 	"Yesterday": "Вчора",
 	"You": "Ви",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "Ви можете налаштувати ваші взаємодії з мовними моделями, додавши спогади через кнопку Керувати, що зробить моделі більш корисними та персоналізованими для вас.",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "Ви можете налаштувати ваші взаємодії з мовними моделями, додавши спогади через кнопку \"Керувати\" внизу, що зробить їх більш корисними та персоналізованими для вас.",
 	"You cannot clone a base model": "Базову модель не можна клонувати",
 	"You have no archived conversations.": "У вас немає архівованих розмов.",
 	"You have shared this chat": "Ви поділилися цим чатом",
