--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Tạo key bí mật mới",
 	"Created at": "Được tạo vào lúc",
 	"Created At": "Tạo lúc",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Mô hình hiện tại",
 	"Current Password": "Mật khẩu hiện tại",
@@ -293,6 +294,9 @@
 	"May": "Tháng 5",
 	"Memories accessible by LLMs will be shown here.": "Memory có thể truy cập bởi LLMs sẽ hiển thị ở đây.",
 	"Memory": "Memory",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Tin nhắn bạn gửi sau khi tạo liên kết sẽ không được chia sẻ. Người dùng có URL sẽ có thể xem cuộc trò chuyện được chia sẻ.",
 	"Minimum Score": "Score tối thiểu",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Đọc ra loa",
 	"Record voice": "Ghi âm",
 	"Redirecting you to OpenWebUI Community": "Đang chuyển hướng bạn đến Cộng đồng OpenWebUI",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Từ chối trả lời mà nhẽ không nên làm vậy",
 	"Regenerate": "Tạo sinh lại câu trả lời",
 	"Release Notes": "Mô tả những cập nhật mới",
@@ -418,6 +423,7 @@
 	"See what's new": "Xem những cập nhật mới",
 	"Seed": "Seed",
 	"Select a base model": "Chọn một base model",
+	"Select a engine": "",
 	"Select a mode": "Chọn một chế độ",
 	"Select a model": "Chọn mô hình",
 	"Select a pipeline": "Chọn một quy trình",
@@ -544,7 +550,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Viết một tóm tắt trong vòng 50 từ cho [chủ đề hoặc từ khóa].",
 	"Yesterday": "Hôm qua",
 	"You": "Bạn",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Bạn không thể nhân bản base model",
 	"You have no archived conversations.": "Bạn chưa lưu trữ một nội dung chat nào",
 	"You have shared this chat": "Bạn vừa chia sẻ chat này",
