--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "创建新安全密钥",
 	"Created at": "创建于",
 	"Created At": "创建于",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "当前模型",
 	"Current Password": "当前密码",
@@ -293,6 +294,9 @@
 	"May": "五月",
 	"Memories accessible by LLMs will be shown here.": "大语言模型可访问的记忆将在此显示。",
 	"Memory": "记忆",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "创建链接后发送的消息不会被共享。具有 URL 的用户将能够查看共享对话。",
 	"Minimum Score": "最低分",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "朗读",
 	"Record voice": "录音",
 	"Redirecting you to OpenWebUI Community": "正在将您重定向到 OpenWebUI 社区",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "无理拒绝",
 	"Regenerate": "重新生成",
 	"Release Notes": "更新日志",
@@ -418,6 +423,7 @@
 	"See what's new": "查阅最新更新内容",
 	"Seed": "种子 (Seed)",
 	"Select a base model": "选择一个基础模型",
+	"Select a engine": "",
 	"Select a mode": "选择一个模式",
 	"Select a model": "选择一个模型",
 	"Select a pipeline": "选择一个管道",
@@ -544,7 +550,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "用 50 个字写一个总结 [主题或关键词]。",
 	"Yesterday": "昨天",
 	"You": "你",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "你不能复制基础模型",
 	"You have no archived conversations.": "你没有已归档的对话。",
 	"You have shared this chat": "你之前已经分享过此",
