--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "建立新密鑰",
 	"Created at": "建立於",
 	"Created At": "建立於",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "目前模型",
 	"Current Password": "目前密碼",
@@ -293,6 +294,9 @@
 	"May": "5月",
 	"Memories accessible by LLMs will be shown here.": "LLM 記憶將會顯示在此處。",
 	"Memory": "記憶",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "創建連結後發送的訊息將不會被共享。具有 URL 的用戶將會能夠檢視共享的聊天。",
 	"Minimum Score": "最小分數",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "讀出",
 	"Record voice": "錄音",
 	"Redirecting you to OpenWebUI Community": "將你重新導向到 OpenWebUI 社群",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "拒絕時不該拒絕",
 	"Regenerate": "重新生成",
 	"Release Notes": "發布說明",
@@ -418,6 +423,7 @@
 	"See what's new": "查看最新內容",
 	"Seed": "種子",
 	"Select a base model": "選擇基礎模型",
+	"Select a engine": "",
 	"Select a mode": "選擇模式",
 	"Select a model": "選擇一個模型",
 	"Select a pipeline": "選擇管道",
@@ -544,7 +550,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "寫一個 50 字的摘要來概括 [主題或關鍵詞]。",
 	"Yesterday": "昨天",
 	"You": "你",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "你不能複製基礎模型",
 	"You have no archived conversations.": "你沒有任何已封存的對話",
 	"You have shared this chat": "你已分享此聊天",
