--- a/src/lib/i18n/locales/ceb-PH/translation.json
+++ b/src/lib/i18n/locales/ceb-PH/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "",
 	"Created at": "Gihimo ang",
 	"Created At": "",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Kasamtangang modelo",
 	"Current Password": "Kasamtangang Password",
@@ -293,6 +294,9 @@
 	"May": "",
 	"Memories accessible by LLMs will be shown here.": "",
 	"Memory": "",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "",
 	"Minimum Score": "",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "",
 	"Record voice": "Irekord ang tingog",
 	"Redirecting you to OpenWebUI Community": "Gi-redirect ka sa komunidad sa OpenWebUI",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "",
 	"Regenerate": "",
 	"Release Notes": "Release Notes",
@@ -419,6 +424,7 @@
 	"See what's new": "Tan-awa unsay bag-o",
 	"Seed": "Binhi",
 	"Select a base model": "",
+	"Select a engine": "",
 	"Select a mode": "Pagpili og mode",
 	"Select a model": "Pagpili og modelo",
 	"Select a pipeline": "",
@@ -545,7 +551,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Pagsulat og 50 ka pulong nga summary nga nagsumaryo [topic o keyword].",
 	"Yesterday": "",
 	"You": "",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "",
 	"You have shared this chat": "",
