--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Créer une nouvelle clé secrète",
 	"Created at": "Créé le",
 	"Created At": "Crée Le",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Modèle actuel",
 	"Current Password": "Mot de passe actuel",
@@ -293,6 +294,9 @@
 	"May": "Mai",
 	"Memories accessible by LLMs will be shown here.": "Les Mémoires des LLMs apparaîtront ici.",
 	"Memory": "Mémoire",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Les messages que vous envoyéz après la création du lien ne seront pas partagés. Les utilisateurs disposant de l'URL pourront voir le chat partagé.",
 	"Minimum Score": "Score Minimum",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Lire à Voix Haute",
 	"Record voice": "Enregistrer la voix",
 	"Redirecting you to OpenWebUI Community": "Redirection vers la communauté OpenWebUI",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Refuse quand il ne devrait pas",
 	"Regenerate": "Regénérer",
 	"Release Notes": "Notes de Version",
@@ -420,6 +425,7 @@
 	"See what's new": "Voir les nouveautés",
 	"Seed": "Graine",
 	"Select a base model": "Sélectionner un modèle de base",
+	"Select a engine": "",
 	"Select a mode": "Sélectionner un mode",
 	"Select a model": "Sélectionner un modèle",
 	"Select a pipeline": "Sélectionner un pipeline",
@@ -546,7 +552,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Ecrivez un résumé en 50 mots qui résume [sujet ou mot-clé]",
 	"Yesterday": "Hier",
 	"You": "Vous",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Vous ne pouvez pas cloner un modèle de base",
 	"You have no archived conversations.": "Vous n'avez pas de conversations archivées",
 	"You have shared this chat": "Vous avez partagé ce chat",
