--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -127,6 +127,7 @@
 	"Create new secret key": "Создать новый секретный ключ",
 	"Created at": "Создано в",
 	"Created At": "Создано в",
+	"Created by": "",
 	"CSV Import": "",
 	"Current Model": "Текущая модель",
 	"Current Password": "Текущий пароль",
@@ -293,6 +294,9 @@
 	"May": "Май",
 	"Memories accessible by LLMs will be shown here.": "Мемории, доступные LLMs, будут отображаться здесь.",
 	"Memory": "Мемория",
+	"Memory added successfully": "",
+	"Memory cleared successfully": "",
+	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Сообщения, которые вы отправляете после создания ссылки, не будут распространяться. Пользователи с URL смогут просматривать общий чат.",
 	"Minimum Score": "Минимальный балл",
 	"Mirostat": "Mirostat",
@@ -379,6 +383,7 @@
 	"Read Aloud": "Прочитать вслух",
 	"Record voice": "Записать голос",
 	"Redirecting you to OpenWebUI Community": "Перенаправляем вас в сообщество OpenWebUI",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Отказано в доступе, когда это не должно было произойти.",
 	"Regenerate": "Перезаписать",
 	"Release Notes": "Примечания к выпуску",
@@ -421,6 +426,7 @@
 	"See what's new": "Посмотреть, что нового",
 	"Seed": "Сид",
 	"Select a base model": "Выбор базовой модели",
+	"Select a engine": "",
 	"Select a mode": "Выберите режим",
 	"Select a model": "Выберите модель",
 	"Select a pipeline": "Выбор конвейера",
@@ -547,7 +553,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишите резюме в 50 словах, которое кратко описывает [тему или ключевое слово].",
 	"Yesterday": "Вчера",
 	"You": "Вы",
-	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Клонировать базовую модель невозможно",
 	"You have no archived conversations.": "У вас нет архивированных бесед.",
 	"You have shared this chat": "Вы поделились этим чатом",
